@@ -382,6 +382,15 @@ describe API::API, api: true  do
       expect(response.status).to eq(404)
     end
 
+    it 'should handle users with dots' do
+      dot_user = create(:user, username: 'dot.user')
+      project = create(:project, creator_id: dot_user.id, namespace: dot_user.namespace)
+
+      get api("/projects/#{dot_user.namespace.name}%2F#{project.path}", dot_user)
+      expect(response.status).to eq(200)
+      expect(json_response['name']).to eq(project.name)
+    end
+
     describe 'permissions' do
       context 'all projects' do
         it 'Contains permission information' do
